--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="br.com.alura.orgs">
+    package="br.edu.infnet.querPagar">
 
     <application
         android:allowBackup="true"
@@ -11,15 +11,15 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Orgs"
+        android:theme="@style/Theme.QuerPagar"
         tools:targetApi="31">
 
         <activity
-            android:name=".ui.activity.FormularioProdutoActivity"
+            android:name="br.edu.infnet.querPagar.ui.activity.FormularioProdutoActivity"
             android:exported="true" />
 
         <activity
-            android:name=".ui.activity.MainActivity"
+            android:name="br.edu.infnet.querPagar.ui.activity.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
